feat(education): add education feature, start configuring professional XP

--- a/src/app/components/jumbotron/jumbotron.component.scss
+++ b/src/app/components/jumbotron/jumbotron.component.scss
@@ -6,7 +6,8 @@
   align-items: center;
   background: url("../../../assets/voxel.png") center center no-repeat;
   background-size: cover;
-  color: $white;
+  color: cssvar(white);
+  width: 100vw;
   height: 100%;
   text-align: center;
   display: flex;
