--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css?family=Lato|Bungee|Source+Code+Pro|Lobster|Shrikhand");
-@import "_variables.scss";
+@import "./_variables.scss";
 
 html,
 body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
   margin: 0;
   font-family: $lato;
   background-color: cssvar(stable);
