feat(proxp): add professional xp feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <navbar></navbar>
 <jumbotron></jumbotron>
 <personal-profile></personal-profile>
+<professional-xp></professional-xp>
 <education></education>
