feat(itxp): implement swiper and itxp cards

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,5 +1,5 @@
 <section id="education-feature">
-  <div class="education-container">
+  <div class="container">
     <div class="education-title">Education: </div>
     <div class="qualifications-container">
       <div class="card-container" *ngFor="let qualification of qualifications">
