feat(languages): add language feature and data, wire up services

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -31,7 +31,7 @@
         color: cssvar(white);
         a {
           text-decoration: none;
-          &:active {
+          &:hover {
             color: cssvar(yellow);
           }
         }
