feat(projects): add project cards and projects feature

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -36,6 +36,7 @@ $dark: #292b2c;
 $light-grey: #eceeef;
 $black: black;
 $stable: #fafafa;
+$purple: rebeccapurple;
 
 $colors_map: (
     yellow: $yellow,
@@ -44,7 +45,8 @@ $colors_map: (
     dark: $dark,
     black: $black,
     stable: $stable,
-    light-grey: $light-grey
+    light-grey: $light-grey,
+    purple: $purple
 );
 
 $paddings-map: (
