fix(features): fix project feature cards, improve layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <navbar></navbar>
-<jumbotron></jumbotron>
+<app-jumbotron></app-jumbotron>
 <personal-profile></personal-profile>
 <professional-xp></professional-xp>
 <education></education>
 <it-xp></it-xp>
 <skills></skills>
-<projects></projects>
+<app-projects></app-projects>
