--- a/src/app/components/it-xp/it-xp.component.scss
+++ b/src/app/components/it-xp/it-xp.component.scss
@@ -8,9 +8,9 @@
         .swiper-slide {
             .card-container {
                 display: grid;
-                grid-template-columns: 33% 33% 33%;
+                grid-template-columns: 25% 25% 25% 25%;
                 grid-row-gap: cssvar(padding-20);
-                margin: cssvar(padding-15);
+                justify-items: center;
             }
         }
     }
