--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -1,8 +1,8 @@
 <section class="cover-container">
     <div class="jumbotron-container">
       <div class="text-container">
-        <h1>Hi, my name is Miguel</h1>
-        <h3>Turning Coffee and Food into Software</h3>
+        <div class="title">{{ welcomeTitle }}</div>
+        <div class="subtitle">{{ welcomeSubtitle }}</div>
         <button class="scroll-button">
             <a href="#profile-feature" role="button">
                 <span class="fa fa-arrow-down fa-lg"></span>
