--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -11,6 +11,8 @@
     <div class="description">
       {{ project.description }}
     </div>
+  </div>
+  <div class="card-footer">
     <div class="technologies-container">
       <span class="technology" *ngFor="let technology of project.technologies">
           {{ technology }}
