--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css?family=Lato|Bungee|Source+Code+Pro|Lobster|Shrikhand");
+@import url("https://fonts.googleapis.com/css?family=Lato|Bungee|Source+Code+Pro|Lobster");
 @import "./_variables.scss";
 
 html,
