--- a/src/app/components/jumbotron/jumbotron.component.scss
+++ b/src/app/components/jumbotron/jumbotron.component.scss
@@ -12,10 +12,22 @@
   text-align: center;
   display: flex;
   align-items: center;
+  max-height: 700px;
 
-  h1 {
-    font-family: $shrikhand;
+  .title {
+    font-family: $lobster;
     font-weight: bold;
+    font-size: 50px;
+    margin-bottom: cssvar(padding-20);
+  }
+
+  .subtitle {
+    font-family: $bungee;
+    font-weight: bold;
+    color: cssvar(yellow);
+    font-size: cssvar(font-xl);
+    margin-bottom: cssvar(padding-20);
+
   }
 
   .scroll-button {
@@ -37,9 +49,5 @@
     }
   }
 
-  h3 {
-    font-family: $bungee;
-    font-weight: bold;
-    color: cssvar(yellow);
-  }
+  
 }
