--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -7,6 +7,8 @@
     .cards-container {
         display: grid;
         grid-template-columns: 33% 33% 33%;
+        grid-template-rows: 280px;
         grid-column-gap: cssvar(padding-10);
+        grid-row-gap: cssvar(padding-10);
     }
 }
