--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -14,6 +14,7 @@
         .card-link {
             :hover {
                 transform: scale(1.2);
+                // TODO: fix this animation
                 animation: all 2s linear;
             }
             a {
@@ -23,6 +24,7 @@
     }
     .card-content {
         .description {
+            text-align: justify;
             margin-bottom: cssvar(padding-15);
         }  
     }
