chore(heroku): fix minor issues and add relevant changes for heroku deploy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app-container" (scroll)="onAppScroll($event)">
     <navbar [class.hide]="!showNavbar" [class.show]="showNavbar"></navbar>
-    <jumbotron></jumbotron>
+    <app-jumbotron></app-jumbotron>
     <personal-profile></personal-profile>
     <professional-xp></professional-xp>
     <education></education>
