--- a/src/app/features/navbar/navbar.component.scss
+++ b/src/app/features/navbar/navbar.component.scss
@@ -49,6 +49,7 @@
       top: 39px;
       background: cssvar(dark);
       padding: cssvar(padding-10);
+      border-radius: 4px;
       .navbar-link {
         @include link-style();
         padding-bottom: cssvar(padding-5);
