--- a/src/app/features/personal-profile/personal-profile.component.scss
+++ b/src/app/features/personal-profile/personal-profile.component.scss
@@ -24,3 +24,9 @@
         }
     }
 }
+
+@media only screen and (max-width: 575px) {
+    .profile-container {
+        flex-direction: column;
+    }
+}
